--- a/templates/odontologia/persona_form.html
+++ b/templates/odontologia/persona_form.html
@@ -6,6 +6,20 @@
         <form method="post" enctype="multipart/form-data" novalidate="">
             {% csrf_token %}
 
+            {% if form.errors %}
+                <!-- Mensajes de error -->
+                <div class="alert-danger">
+                    <p>Hay errores en los datos ingresados. Por favor, corriga los siguiente:</p>
+                    {{ form.non_field_errors }}
+                    <ul>
+                        {% for field in form %}
+                            {% if field.errors %}<li>{{ field.label }}: {{ field.errors|striptags }}</li>{% endif %}
+                        {% endfor %}
+                    </ul>
+                    <hr/><br/>
+                </div>
+            {% endif %}
+        
             <div class="col-sm-12 maincontent">
                 <div class="row">
                     <div class="col-xs-2">
